# rcli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  cliff.toml  test.rest
assets/: tdecode.txt  tencode.txt
fixtures/: blake3  blake3.key  ed25519.key  ed25519.pub
src/: cli.rs  main.rs  options.rs  opts.rs  process.rs  utils.rs
src/cli/: base64_options.rs  csv_options.rs  gen_pass_options.rs  http_options.rs  text_options.rs
src/process/: b64.rs  csv.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  text.rs
